test/parser/ast/assignment/invalid_pattern_error.exp
Error: Left side of assignment must be a pattern
test/parser/ast/assignment/invalid_pattern_error.myte:4:2
 4 |   1 = 2;
   |   ^